@@ -1,5 +1,7 @@
 1999-03-25  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
+        * gtkhex.c (gtk_hex_real_data_changed): don't bother to redraw
+	anything if the area changed is not visible.
 	* help/C/index.html: make it consistent with the application ;)
 
 1999-03-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
